--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "small-ord-set"
-description = "small-ord-set."
-version = "0.0.0"
+description = "A set data-structure represented by a sorted `SmallVec`"
+version = "0.1.0"
 authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
 repository = "https://github.com/andrewhickman/small-ord-set"
 documentation = "https://docs.rs/small-ord-set"
+categories = ["algorithms", "data-structures", "no-std"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 edition = "2018"
@@ -13,3 +14,4 @@ edition = "2018"
 smallvec = "~1"
 
 [dev-dependencies]
+version-sync = "0.8.1"
