--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
 repository = "https://github.com/andrewhickman/small-ord-set"
 documentation = "https://docs.rs/small-ord-set"
-categories = ["algorithms", "data-structures", "no-std"]
+categories = ["algorithms", "data-structures"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 edition = "2018"
