--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ license = "MIT/Apache-2.0"
 readme = "README.md"
 edition = "2018"
 
+[features]
+union = ["smallvec/union"]
+
 [dependencies]
-smallvec = "~1"
+smallvec = "1.6.0"
 
 [dev-dependencies]
 version-sync = "0.8.1"
